--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.19.3",
     "pug": "^3.0.3"
   },
   "devDependencies": {
